
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* replaced Model.isRevisionEnabled() and getRevisionNumber() by getRevisions()
	this breaks backwards API compatibility, but is unlikely to affect normal projects
* renamed dsmf driver to dialect
	this breaks backwards API compatibility, but is unlikely to affect normal projects
* moved info classes into separate package
	this breaks backwards API compatibility, but is unlikely to affect normal projects
* removed cope live editor from exedio-cope.jar, it is now it's own project
* deprecated empty constructor of Schedule, provide a Locale instead
* subclasses of MediaPath do not get the url extension anymore
* MediaPath got new method getNamedURL, with additional parameter for setting the "name" of the media
* Console History puts date first in unique constraints
	- makes purging faster
	- affect persistent schema of the history
		you have to drop the old constraints and create the new constraints
* renamed UniqueConstraint.searchUnique to search
	affects instrumented code
* Console allows checking Media ContentType against body using magic numbers
* rename Media.contentTypeMajor to contentTypeSub
* Media with default Content-Type or major Content-Type do restrict the
	CharSet of the StringField storing the Content-Type. You may need to adjust
	the persistent schema (adding new check constraints) and/or adjust your data.
* add pattern Range
* Editor provides LOGIN_PATH_INFO
* Editor provides isBordersEnabled()
	use  this instead of isLoggedIn() for triggering css import
* Interrupter from exedio-cope-util.jar is used
	- affects Dispatcher, Schedule, PasswordRecovery
* cope now depends on new project copeutil